--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
                 <p>
                     <h2 id="вступ">Вступ</h2>
 
+<p>Цього разу ми розберемо команди Git, які дозволяють отримати інформацію про коміти і зміни у них.
+
                     <br>
                 </p>
                 <p class="article-more-link">
